<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageViewProduct"
        android:layout_width="271dp"
        android:layout_height="406dp"
        android:layout_marginTop="40dp"
        android:scaleType="centerCrop"
        android:src="@drawable/warriors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomLayout"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:background="@drawable/background_arrodonit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewProduct"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textViewPrincipal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/camiseta_golden_state_warriors"
            android:textColor="#414670"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewPreu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_104_99"
            android:textColor="#637286"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPrincipal" />

        <TextView
            android:id="@+id/textViewTalla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/camisetes_equips_nba"
            android:textColor="#2d3f4b"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPreu" />

        <TextView
            android:id="@+id/textViewDescripcio"
            android:layout_width="292dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:text="@string/camiseta_de_l_equip_golden_state_warriors_amb_el_jugador_stephen_curry_a_l_esquena_n_mero_30_camiseta_nba"
            android:textAlignment="center"
            android:textColor="#95a5b2"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTalla" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@+id/textViewDescripcio"
            tools:layout_editor_absoluteX="0dp" />

        <Spinner
            android:id="@+id/spinnerTalles"
            android:layout_width="125dp"
            android:layout_height="45dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/spinner_border"
            android:popupBackground="@android:color/white"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDescripcio" />

        <Button
            android:id="@+id/buttonAfegirCistella"
            android:layout_width="175dp"
            android:layout_height="45dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/boto_drawable"
            android:text="@string/afegir_a_la_cistella"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.156"
            app:layout_constraintStart_toEndOf="@+id/spinnerTalles"
            app:layout_constraintTop_toBottomOf="@+id/textViewDescripcio" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>